# esl

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  README.md  build.py
.githooks/: pre-commit
.githooks/scripts/: cpplint.py
.github/workflows/: build_and_test.yml  lint.yml  linux_build_and_test.yml  windows_build_and_test.yml
cmake/: CPM.cmake  clang_tidy.cmake  compiler_msvc.cmake  compiler_posix.cmake  esl-config.cmake.in  install.cmake  sanitizer.cmake
esl/: CMakeLists.txt  byteswap.h  file_util.h  ignore_unused.h  macros.h  scope_guard.h  strings.h  unique_handle.h  utility.h
esl/detail/: files.h  secure_crt.h  strings_join.h  strings_match.h  strings_split.h
tests/: CMakeLists.txt  byteswap_test.cpp  file_util_test.cpp  scope_guard_test.cpp  stringification.h  strings_join_test.cpp  strings_match_test.cpp  strings_split_test.cpp  strings_trim_test.cpp  test_main.cpp  test_util.h  unique_handle_test.cpp  utility_test.cpp
